--- a/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                           xmlns:tools="http://schemas.android.com/tools"
-                                           xmlns:app="http://schemas.android.com/apk/res-auto"
-                                           android:id="@+id/bottom_sheet"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="match_parent"
-                                           android:clipToPadding="false"
-                                           android:paddingBottom="@dimen/list_item_spacing_half"
-                                           android:paddingTop="@dimen/list_item_spacing_half"
-                                           app:behavior_hideable="true"
-                                                   android:background="@drawable/bg_botom_sheet_dialog"
-                                           app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-                                           >
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/bottom_sheet"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/list_item_spacing_half"
+    android:paddingTop="@dimen/list_item_spacing_half"
+    app:behavior_hideable="true"
+    android:background="@drawable/bg_botom_sheet_dialog"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
 
     <TextView
