--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -50,7 +50,12 @@
         android:id="@+id/checkoutFragment"
         android:name="com.example.mooka_customer.screens.CheckoutFragment"
         android:label="fragment_checkout"
-        tools:layout="@layout/fragment_checkout" />
+        tools:layout="@layout/fragment_checkout" >
+        <action
+            android:id="@+id/action_checkoutFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@+id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailUmkmFragment"
         android:name="com.example.mooka_customer.screens.DetailUmkmFragment"
