--- a/app/src/main/res/layout/fragment_detail_produk.xml
+++ b/app/src/main/res/layout/fragment_detail_produk.xml
@@ -167,15 +167,16 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="44dp"
-                app:layout_constraintTop_toBottomOf="@id/textView10"
                 android:id="@+id/rv_produk_lainnnya"
-                tools:listitem="@layout/item_pilihan_toko_lainnya"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:orientation="horizontal"
-                tools:layout_editor_absoluteY="-45dp" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView10"
+                tools:listitem="@layout/item_pilihan_toko_lainnya" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -199,11 +200,12 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="Ulasan"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/font_title"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
