--- a/app/src/main/res/layout/item_pilihan_toko_lainnya.xml
+++ b/app/src/main/res/layout/item_pilihan_toko_lainnya.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="140dp"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_background"
-        android:layout_width="109dp"
-        android:layout_height="109dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
@@ -17,7 +17,8 @@
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/example_bg_roti" />
+        android:src="@drawable/example_bg_roti"
+        app:riv_corner_radius="12dp"/>
 
     <ImageView
         android:id="@+id/imageView4"
@@ -27,33 +28,35 @@
         app:layout_constraintEnd_toEndOf="@+id/iv_background"
         app:layout_constraintStart_toStartOf="@+id/iv_background"
         app:layout_constraintTop_toTopOf="@+id/iv_background"
-        app:srcCompat="@drawable/gradient_linechart" />
+        app:srcCompat="@drawable/gradient_linechart_circle" />
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Sweater Baju bayi"
+        android:layout_marginBottom="8dp"
+        android:text="Baju Kemeja Lukis Motif Panntai"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/font_subtitle"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_background"
-        app:layout_constraintEnd_toEndOf="@id/iv_background"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView4" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/iv_background" />
 
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rp, 59.000"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/ruby_red"
         app:layout_constraintTop_toBottomOf="@id/iv_background"
         app:layout_constraintEnd_toEndOf="@id/tv_title"
         app:layout_goneMarginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="@dimen/font_extra_small"
+        android:textSize="@dimen/font_title"
         app:layout_constraintStart_toStartOf="@+id/tv_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
