--- a/app/src/main/res/layout/fragment_detail_umkm.xml
+++ b/app/src/main/res/layout/fragment_detail_umkm.xml
@@ -88,6 +88,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
+            android:id="@+id/rv_pilihan_toko"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
