--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,7 +25,8 @@
             android:id="@+id/et_no_telp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="No Telp" />
+            android:hint="No Telp"
+            android:inputType="number"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -39,7 +40,8 @@
         android:textColorHint="@color/ruby_red"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
@@ -47,8 +49,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:textColor="@color/ruby_red"
-            tools:layout_editor_absoluteX="-45dp"
-            tools:layout_editor_absoluteY="488dp" />
+            android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
