--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -248,7 +248,7 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/view7"
-            app:layout_constraintEnd_toStartOf="@+id/imageView15"
+            app:layout_constraintEnd_toStartOf="@+id/iv_logout_arrow"
             app:layout_constraintStart_toEndOf="@+id/imageView13"
             app:layout_constraintTop_toBottomOf="@+id/view6" />
 
@@ -263,7 +263,7 @@
             app:layout_constraintTop_toBottomOf="@+id/view5" />
 
         <ImageView
-            android:id="@+id/imageView15"
+            android:id="@+id/iv_logout_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
