--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -25,7 +25,11 @@
         android:id="@+id/profileFragment"
         android:name="com.example.mooka_customer.screens.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_loginActivity"
+            app:destination="@id/loginActivity" />
+    </fragment>
     <fragment
         android:id="@+id/notificationFragment"
         android:name="com.example.mooka_customer.screens.NotificationFragment"
@@ -65,4 +69,9 @@
             android:name="idUmkm"
             app:argType="integer" />
     </fragment>
+    <activity
+        android:id="@+id/loginActivity"
+        android:name="com.example.mooka_customer.screens.LoginActivity"
+        android:label="activity_login"
+        tools:layout="@layout/activity_login" />
 </navigation>
