--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.LoginFragment">
+    tools:context=".screens.LoginFragment"
+    android:background="@color/colorWhite">
 
 
     <com.google.android.material.textfield.TextInputLayout
