--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -29,6 +29,9 @@
         <action
             android:id="@+id/action_profileFragment_to_loginActivity"
             app:destination="@id/loginActivity" />
+        <action
+            android:id="@+id/action_profileFragment_to_daftarTagihanFragment"
+            app:destination="@id/daftarTagihanFragment" />
     </fragment>
     <fragment
         android:id="@+id/notificationFragment"
