--- a/app/src/main/res/layout/item_tagihans.xml
+++ b/app/src/main/res/layout/item_tagihans.xml
@@ -14,74 +14,22 @@
         android:text="No Pembayaran Briva"
         android:textColor="@android:color/black"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_status"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_status" />
-
-    <TextView
-        android:id="@+id/text_harga_briva"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Harga Bayar"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tv_nomor_briva"
-        android:layout_marginTop="16dp"
-
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
+        tools:layout_editor_absoluteY="16dp" />
 
 
     <TextView
         android:id="@+id/tv_nomor_briva"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="228dp"
         android:layout_marginBottom="16dp"
         android:text="081358847213"
 
 
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvJudulNotification"
         app:layout_constraintTop_toBottomOf="@+id/tvJudulNotification"
         app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/tv_harga_briva"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Rp 15.000.000"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        app:layout_constraintStart_toStartOf="@+id/tvJudulNotification"
-        app:layout_constraintTop_toBottomOf="@+id/text_harga_briva"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/tv_tanggal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="21/12/2012"
-        app:layout_constraintEnd_toEndOf="@+id/tv_status"
-        app:layout_constraintStart_toStartOf="@+id/tv_status"
-        app:layout_constraintTop_toBottomOf="@+id/tv_status" />
-
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Sudah Dibayar"
-        android:background="@drawable/background_green_line_soft"
-        android:padding="8dp"
-        android:textColor="@color/green_500"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view"
